update fix video box on narrow screen,

--- a/gatsby-current/src/scss/style.module.scss
+++ b/gatsby-current/src/scss/style.module.scss
@@ -50,11 +50,6 @@
   background-color: $preview_channel_bg_color;
 }
 
-.youtube-video-container{
-  width: 100%;
-  height: 100%;
-}
-
 .drag-button:hover {
   border-radius: 0px;
   height: 100%;
@@ -103,23 +98,6 @@
   width: 100%;
   height: 0;
   padding-bottom: 56.25%;
-}
-
-.video-container {
-  display: inline-flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-
-  background-color: brown;
-}
-
-.video {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
 }
 
 .handler-drag:hover {
