--- a/gatsby-current/src/scss/style.scss
+++ b/gatsby-current/src/scss/style.scss
@@ -11,6 +11,45 @@ $preview_channel_bg_color: black;
 @import "../../node_modules/@creativebulma/bulma-divider/src/sass/index.sass";
 
 
+
+.video-container {
+  display: inline-flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+
+  background-color: brown;
+}
+
+.youtube-video-container{
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+
+  &::after{
+    padding-top: 56.25%;
+    display: block;
+    content: '';
+  }
+
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.video {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+}
+
+
 .sidebar-container{
   // background-color: red;
 }
